Upgraded to Java 24, JavaFX 24 and SDL 3.2.10